yaml-app/app-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-app-service
  namespace: admin-app
spec:
  selector:
    app: admin-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
