yaml-app/app-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-app-service
  namespace: user-app
spec:
  selector:
    app: user-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
